# splash

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  agent_loop.sh  agent_loop.state  comment.md  issue7.json  pr_comment.md  pr_comment_explain.md  resolve.py  test_auto_reload_integration.txt
.agents/: ORIGINAL_REQUEST.md  mcp_config.json
.agents/orchestrator/: BRIEFING.md  PROJECT.md  context.md  handoff.md  m1_task_brief.md  m2_task_brief.md  plan.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/teamwork_preview_auditor_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/teamwork_preview_auditor_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/teamwork_preview_auditor_m2_remediation/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/teamwork_preview_auditor_m3/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/teamwork_preview_challenger_m1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  (+1 more)
src/: app.rs  leader.rs  lib.rs  main.rs  mcp_guard.rs  mcp_proxy.rs  pty.rs  test_notify.rs  tree.rs
tests/: agy_mcp_config_integration.rs  auto_reload.rs  claude_mcp_config_integration.rs  empirical_challenge_m1_2.rs  empirical_challenge_m2_1.rs  empirical_challenge_m2_2.rs  empirical_challenge_m2_remediation.rs  empirical_challenge_m2_remediation_2.rs  file_tree_visuals.rs  headless_harness.rs  interactive_leader_keys.rs  mcp_server.rs  mcp_signal_panic_integration.rs  pane_layout_engine.rs  pty_integration.rs  snapshot_inspection.rs  stress_tests.rs  validate_agy_visuals.rs
(+107 files in other folders)
