[package]
name = "splash"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
portable-pty = "0.8"
regex = "1"
unicode-width = "0.1"
vt100 = "0.15"
notify-debouncer-mini = "0.7.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tiny_http = "0.12.0"
ctrlc = "3.4"

[dev-dependencies]
ureq = { version = "3.3.0", features = ["json"] }


